fix store, add custom fills v-plot

--- a/src/v-plot/fragment.html
+++ b/src/v-plot/fragment.html
@@ -85,23 +85,24 @@
                     <v-shading
                         :name="shading.name"
                         v-if="JSON.parse(shading.fill).display"
-                        :type-fill-color="formatShadingTypeFill(JSON.parse(shading.fill).varShading.varShadingType)"
-                        :min-color="JSON.parse(shading.fill).varShading.gradient.startColor"
-                        :max-color="JSON.parse(shading.fill).varShading.gradient.endColor"
-                        :custom-fill-values="getShadingCustomFills(JSON.parse(shading.fill).varShading.customFills)"
-                        :fill-pattern-list="getShadingPatternList(JSON.parse(shading.fill).varShading.customFills)"
-                        :foreground-color-list="getShadingForegroundList(JSON.parse(shading.fill).varShading.customFills)"
-                        :background-color-list="getShadingBackgroundList(JSON.parse(shading.fill).varShading.customFills)"
+                        :type-fill-color="getShadingType(shading)"
+                        :min-color="getShadingMinColor(shading)"
+                        :max-color="getShadingMaxColor(shading)"
+                        :custom-fill-values="getShadingCustomFills(track.idTrack, shading)"
+                        :fill-pattern-list="getShadingPatternList(shading)"
+                        :foreground-color-list="getShadingForegroundList(shading)"
+                        :background-color-list="getShadingBackgroundList(shading)"
+                        :palette="getShadingType(shading) === 'Palette' ? getShadingPalette(shading) : []"
                         :view-width="convertWidth(track.widthUnit, track.width)" :view-height="trackBodyScale"
                         y-transform="linear"
-                        :x-transform="getShadingInfo(track.lines, shading).xTransform"
+                        :x-transform="getXTransformShading(track.idTrack, shading)"
                         :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
-                        :real-min-x="track.lines.filter(line => line.idLine === shading.idRightLine)[0].minValue"
-                        :real-max-x="track.lines.filter(line => line.idLine === shading.idRightLine)[0].maxValue"
+                        :real-min-x="track.lines.filter(line => line.idCurve === shading.idControlCurve)[0].minValue"
+                        :real-max-x="track.lines.filter(line => line.idCurve === shading.idControlCurve)[0].maxValue"
                         :curve-low-value="JSON.parse(shading.fill).varShading.startX"
                         :curve-high-value="JSON.parse(shading.fill).varShading.endX"
                         :real-left="shading.leftFixedValue"
-                        :real-right="shading.rightFixedValue || track.lines.filter(line => line.idLine === shading.idRightLine)[0].curveData"
+                        :real-right="shading.rightFixedValue || track.lines.filter(line => line.idCurve === shading.idControlCurve)[0].curveData"
                         />
                 </fragment>
                 <v-curve
