--- a/src/v-plot/fragment.html
+++ b/src/v-plot/fragment.html
@@ -81,34 +81,34 @@
                 :enabled="true">
                 <fragment
                     v-for="(shading, idx) in track.shadings"
-                    :key="shading.name + idx + shading.idShading">
+                    :key="shading.name + shading.idControlCurve + shading.idShading">
                     <v-shading
                         :name="shading.name"
                         v-if="JSON.parse(shading.fill).display"
-                        :type-fill-color="getShadingType(shading)"
-                        :min-color="getShadingMinColor(shading)"
-                        :max-color="getShadingMaxColor(shading)"
-                        :custom-fill-values="getShadingCustomFills(track.idTrack, shading)"
-                        :fill-pattern-list="getShadingPatternList(shading)"
-                        :foreground-color-list="getShadingForegroundList(shading)"
-                        :background-color-list="getShadingBackgroundList(shading)"
-                        :palette="getShadingType(shading) === 'Palette' ? getShadingPalette(shading) : []"
+                        :type-fill-color="getShadingType(JSON.parse(shading.fill))"
+                        :min-color="getShadingMinColor(JSON.parse(shading.fill))"
+                        :max-color="getShadingMaxColor(JSON.parse(shading.fill))"
+                        :custom-fill-values="getShadingCustomFills(JSON.parse(shading.fill), shading)"
+                        :fill-pattern-list="getShadingPatternList(JSON.parse(shading.fill))"
+                        :foreground-color-list="getShadingForegroundList(JSON.parse(shading.fill))"
+                        :background-color-list="getShadingBackgroundList(JSON.parse(shading.fill))"
+                        :palette="getShadingType(JSON.parse(shading.fill)) === 'Palette' ? getShadingPalette(shading) : []"
                         :view-width="convertWidth(track.widthUnit, track.width)" :view-height="trackBodyScale"
                         y-transform="linear"
-                        :x-transform="getXTransformShading(track.idTrack, shading)"
+                        :x-transform="getXTransformShading(shading)"
                         :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
-                        :real-min-x="track.lines.filter(line => line.idCurve === shading.idControlCurve)[0].minValue"
-                        :real-max-x="track.lines.filter(line => line.idCurve === shading.idControlCurve)[0].maxValue"
-                        :curve-low-value="JSON.parse(shading.fill).varShading.startX"
-                        :curve-high-value="JSON.parse(shading.fill).varShading.endX"
-                        :real-left="shading.leftFixedValue"
-                        :real-right="shading.rightFixedValue || track.lines.filter(line => line.idCurve === shading.idControlCurve)[0].curveData"
+                        :real-min-x="getShadingRealMinX(shading)"
+                        :real-max-x="getShadingRealMaxX(shading)"
+                        :shading-low-value="JSON.parse(shading.fill).varShading.startX"
+                        :shading-high-value="JSON.parse(shading.fill).varShading.endX"
+                        :real-left="getShadingRealLeft(shading)"
+                        :real-right="getShadingRealRight(shading)"
                         />
                 </fragment>
                 <v-curve
-                    v-for="(line, idx) in track.lines"
-                    :key="line.alias + idx + line.idCurve" :name="line.alias"
-                    :real-path="line.curveData" :unit="line.unit"
+                    v-for="(line, idx) in $store.state.lines.filter(line => line.idTrack === track.idTrack)"
+                    :key="line.alias + idx + line.idLine" :name="line.alias"
+                    :real-path="line.curve" :unit="line.unit"
                     :symbol-color="line.symbolFillStyle" :line-width="line.lineWidth"
                     :line-color="line.lineColor" :line-dash="line.lineStyle ? line.lineStyle : ''"
                     :real-min-x="line.minValue" :real-max-x="line.maxValue"
