--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -54,16 +54,16 @@
                         :line-color="0x101010" :line-width="1"
                         :view-pos-x="0" :view-pos-y="0"
                         :type-fill-color="child.typeFillColor"
-                        :foreground-color="child.foregroundColor"
-                        :background-color="child.backgroundColor"
-                        :image-pattern-url="child.imagePatternUrl"
+                        :foreground-color="child.foregroundColorList && child.foregroundColorList.length === 1 ? child.foregroundColorList[0] : null"
+                        :background-color="child.backgroundColorList && child.backgroundColorList.length === 1 ? child.backgroundColorList[0] : null"
+                        :image-pattern-url="child.fillPatternList && child.fillPatternList.length === 1 ? child.fillPatternList[0] : null"
                         :min-color="child.minColor" :max-color="child.maxColor"
                         :palette="child.palette"
                         :view-width="viewWidth" :view-height="30"
                         :fill-color="selectionStates[idx] ? '0xffc2b3' : '0xFFFFFF'"
                         :fill-transparency="0" :content-style="headerContentStyle"
-                        :curve-low-value="child.curveLowValue"
-                        :curve-high-value="child.curveHighValue"
+                        :shading-low-value="child.shadingLowValue"
+                        :shading-high-value="child.shadingHighValue"
                         x-transform="none" y-transform="none"
                     />
                     <v-header-curve 
