--- a/src/v-track/fragment.html
+++ b/src/v-track/fragment.html
@@ -57,8 +57,9 @@
                         :foreground-color="child.foregroundColorList && child.foregroundColorList.length === 1 ? child.foregroundColorList[0] : null"
                         :background-color="child.backgroundColorList && child.backgroundColorList.length === 1 ? child.backgroundColorList[0] : null"
                         :image-pattern-url="child.fillPatternList && child.fillPatternList.length === 1 ? child.fillPatternList[0] : null"
-                        :min-color="child.minColor" :max-color="child.maxColor"
-                        :palette="child.palette"
+                        :min-color="child.getShadingMinColor" 
+                        :max-color="child.getShadingMaxColor"
+                        :palette="child.palette || child.positiveSidePalette"
                         :view-width="viewWidth" :view-height="30"
                         :fill-color="selectionStates[idx] ? '0xffc2b3' : '0xFFFFFF'"
                         :fill-transparency="0" :content-style="headerContentStyle"
