--- a/src/v-shading/fragment.html
+++ b/src/v-shading/fragment.html
@@ -1,16 +1,23 @@
 <fragment v-if="isSelected">
     <v-path
-        symbol-color="0x000000"
+        :real-min-x="!isNaN(leftRealMinX) ? leftRealMinX : realMinX"
+        :real-max-x="!isNaN(leftRealMaxX) ? leftRealMaxX : realMaxX"
+        :real-min-y="realMinY" :real-max-y="realMaxY"
+        :x-transform="xTransform" :y-transform="yTransform"
+        symbol-color="0xFF0000"
         :view-height="viewHeight" :view-width="viewWidth"
-        :real-path="shadingPathLeft" :line-width="3" 
+        :real-path="realLeft" :line-width="3" 
         :line-transparency="0.3" 
         :shading-offset-x="-2" :shading-offset-y="-2">
     </v-path>
     <v-path
+        :real-min-x="realMinX" :real-max-x="realMaxX"
+        :real-min-y="realMinY" :real-max-y="realMaxY"
+        :x-transform="xTransform" :y-transform="yTransform"
         symbol-color="0x000000"
         :view-height="viewHeight" :view-width="viewWidth"
-        :real-path="shadingPathRight" :line-width="3" 
+        :real-path="realRight" :line-width="3" 
         :line-transparency="0.3"
-         :shading-offset-x="1" :shading-offset-y="-2">
+        :shading-offset-x="1" :shading-offset-y="-2">
     </v-path>
 </fragment>
